# codedriver

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  codedriver.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
codedriver/: __init__.py  __main__.py  agent.py  codedriver.py  file_parser.py  scan.py  testing.py
codedriver/cli/: __init__.py  change.py  info.py
codedriver/llms/: base.py  claude_sonnet.py  exceptions.py  google_gemini.py  registry.py
codedriver/utils/: logging.py
