# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8.0"]

[tool.setuptools_scm]
write_to = "codedriver/version.py"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ['build']
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
omit = [
    "codedriver/version.py"
]
