[metadata]
name = codedriver
description = Drive your code from the CLI using AI
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/codedriver
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    codedriver = codedriver.__main__:main
